...
                                        <rect key="frame" x="60" y="10" width="180" height="160"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="180" id="PbJ-fd-mgJ"/>
                                            <constraint firstAttribute="height" constant="160" id="pqW-Op-lir"/>
                                        </constraints>
                                    </imageView>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="track.r" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Qo-y8-UIQ">
                                        <rect key="frame" x="10" y="180" width="280" height="36"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                        <color key="textColor" systemColor="systemCyanColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dQL-f7-q5I">
                                        <rect key="frame" x="25" y="226" width="250" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="usernameField"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" smartInsertDeleteType="no"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QoX-Ak-g7h">
                                        <rect key="frame" x="25" y="275" width="250" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" smartInsertDeleteType="no"/>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vme-HU-GDS">
                                        <rect key="frame" x="109" y="329" width="81.666666666666686" height="50.333333333333314"/>
                                        <color key="tintColor" systemColor="systemCyanColor"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="filled" title="Login" buttonSize="large"/>
                                        <connections>
                                            <action selector="loginTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="kSA-Lh-gAs"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
...
